# binary_obfuscation

./: CMakeLists.txt  README.md
binary_obfuscation/: binary_obfuscation.c  cypher.c  cypher.h  err.h  mem.c  mem.h  pe.c  pe.h
method_A/: method_A.c
method_B/: method_B.c
method_C/: method_C.c
method_D/: method_D.c
